k8s/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-svc
spec:
  type: NodePort
  selector:
    app: aceest
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
