k8s/canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"   # 20% traffic to canary
spec:
  rules:
  - host: aceest.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aceest-canary
            port:
              number: 5000
